<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:fillViewport="true"
    tools:context=".Sign_up">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical"
        android:layout_gravity="center"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="SIGN UP"
            android:textAlignment="center"
            android:textSize="16dp"
            android:layout_gravity="top"
            android:gravity="top"
            android:layout_margin="24dp"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/txt_phone"
            android:layout_width="match_parent"
            android:inputType="phone"
            android:layout_marginLeft="16dp"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            />
        <EditText
            android:id="@+id/txt_name"
            android:layout_width="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            />
        <EditText
            android:id="@+id/txt_city"
            android:layout_width="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_height="wrap_content"
            android:hint="@string/city"
            />
        <EditText
            android:id="@+id/txt_fulladdress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:hint="@string/address"/>

        <Button
            android:id="@+id/btn_sendotp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="-8dip"
            android:text="@string/send_otp"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:id="@+id/btn_signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:layout_gravity="right"
            />

    </LinearLayout>

</ScrollView>