<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"

    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <android.support.v7.widget.CardView
        android:background="#ffedcc"
        app:cardCornerRadius="8dp"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout

            android:background="#ffedcc"
            android:id="@+id/history_layout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/history_date"
                android:text="@string/date"
                android:layout_marginLeft="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/history_time"
                android:text="@string/time"
                android:layout_marginLeft="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/history_name"
                android:text="@string/salon_name"
                android:layout_marginLeft="8dp"
                android:textSize="24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/history_address"
                android:text="@string/salon_address"
                android:layout_marginLeft="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/history_phonenumber"
                android:text="@string/salon_phonenumber"
                android:layout_marginLeft="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>